--- a/style_web.css
+++ b/style_web.css
@@ -1,9 +1,13 @@
-body {
-    background-color: #f8f9fa;
-    margin: 20px;
+.cursor-pointer {
+    cursor: pointer;
 }
 
 #company-list {
-    max-height: 500px;
+    max-height: 100vh;
     overflow-y: auto;
+}
+
+#companyChart {
+    width: 100%;
+    height: 400px;
 }
